rust_core/target/debug/build/rust_core-6135a91b0c643109/out/bindings.rs

pub const capture_error_t_CAPTURE_SUCCESS: capture_error_t = 0;
pub const capture_error_t_CAPTURE_ERROR_INVALID_PARAM: capture_error_t = 1;
pub const capture_error_t_CAPTURE_ERROR_INIT_FAILED: capture_error_t = 2;
pub const capture_error_t_CAPTURE_ERROR_OPEN_FAILED: capture_error_t = 3;
pub const capture_error_t_CAPTURE_ERROR_SET_FILTER: capture_error_t = 4;
pub const capture_error_t_CAPTURE_ERROR_START_FAILED: capture_error_t = 5;
pub const capture_error_t_CAPTURE_ERROR_STOP_FAILED: capture_error_t = 6;
pub const capture_error_t_CAPTURE_ERROR_PAUSE_FAILED: capture_error_t = 7;
pub const capture_error_t_CAPTURE_ERROR_RESUME_FAILED: capture_error_t = 8;
pub const capture_error_t_CAPTURE_ERROR_GET_STATS: capture_error_t = 9;
pub const capture_error_t_CAPTURE_ERROR_GET_DEVICES: capture_error_t = 10;
pub const capture_error_t_CAPTURE_ERROR_NOT_SUPPORTED: capture_error_t = 11;
pub const capture_error_t_CAPTURE_ERROR_BACKEND: capture_error_t = 12;
pub const capture_error_t_CAPTURE_ERROR_MEMORY: capture_error_t = 13;
pub const capture_error_t_CAPTURE_ERROR_TIMEOUT: capture_error_t = 14;
pub const capture_error_t_CAPTURE_ERROR_INTERNAL: capture_error_t = 15;
#[doc = " 错误码定义"]
pub type capture_error_t = ::std::os::raw::c_uint;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_ETHERNET: capture_device_type_t = 1;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_WIFI: capture_device_type_t = 2;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_LOOPBACK: capture_device_type_t = 3;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_TUN: capture_device_type_t = 4;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_TAP: capture_device_type_t = 5;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_BRIDGE: capture_device_type_t = 6;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_VLAN: capture_device_type_t = 7;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_BOND: capture_device_type_t = 8;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_VETH: capture_device_type_t = 9;
pub const capture_device_type_t_CAPTURE_DEVICE_TYPE_OTHER: capture_device_type_t = 10;
#[doc = " 设备类型定义"]
pub type capture_device_type_t = ::std::os::raw::c_uint;
pub const capture_backend_type_t_CAPTURE_BACKEND_PCAP: capture_backend_type_t = 0;
pub const capture_backend_type_t_CAPTURE_BACKEND_PFRING: capture_backend_type_t = 1;
pub const capture_backend_type_t_CAPTURE_BACKEND_DPDK: capture_backend_type_t = 2;
pub const capture_backend_type_t_CAPTURE_BACKEND_EBPF: capture_backend_type_t = 3;
#[doc = " 抓包后端类型"]
pub type capture_backend_type_t = ::std::os::raw::c_uint;
#[doc = " 抓包配置结构"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_config_t {
    pub device: *const ::std::os::raw::c_char,
    pub filter: *const ::std::os::raw::c_char,
    pub snaplen: ::std::os::raw::c_int,
    pub timeout_ms: ::std::os::raw::c_int,
    pub promiscuous: bool,
    pub immediate: bool,
    pub buffer_size: u32,
    pub type_: capture_backend_type_t,
    pub backend_config: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_capture_config_t() {
    const UNINIT: ::std::mem::MaybeUninit<capture_config_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<capture_config_t>(),
        48usize,
        concat!("Size of: ", stringify!(capture_config_t))
    );
    assert_eq!(
        ::std::mem::align_of::<capture_config_t>(),
        8usize,
        concat!("Alignment of ", stringify!(capture_config_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).device) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(device)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).filter) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(filter)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).snaplen) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(snaplen)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).timeout_ms) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(timeout_ms)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).promiscuous) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(promiscuous)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).immediate) as usize - ptr as usize },
        25usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(immediate)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buffer_size) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(buffer_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).backend_config) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_config_t),
            "::",
            stringify!(backend_config)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_handle {
    _unused: [u8; 0],
}
#[doc = " 抓包句柄"]
pub type capture_handle_t = capture_handle;
#[doc = " 数据包回调函数类型\n @param packet 数据包\n @param user_data 用户数据\n @return 返回 true 继续抓包，false 停止抓包"]
pub type packet_callback_t = ::std::option::Option<
    unsafe extern "C" fn(packet: *const packet_t, user_data: *mut ::std::os::raw::c_void) -> bool,
>;
#[doc = " 错误回调函数类型\n @param error 错误信息\n @param user_data 用户数据"]
pub type error_callback_t = ::std::option::Option<
    unsafe extern "C" fn(
        error: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[doc = " 初始化抓包系统\n @param config 配置信息\n @param error_cb 错误回调函数\n @param error_user_data 错误回调用户数据\n @return 成功返回抓包句柄，失败返回 NULL"]
    pub fn capture_init(
        config: *const capture_config_t,
        error_cb: error_callback_t,
        error_user_data: *mut ::std::os::raw::c_void,
    ) -> *mut capture_handle_t;
}
extern "C" {
    #[doc = " 开始抓包\n @param handle 抓包句柄\n @param packet_cb 数据包回调函数\n @param user_data 用户数据\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_start(
        handle: *mut capture_handle_t,
        packet_cb: packet_callback_t,
        user_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 停止抓包\n @param handle 抓包句柄\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_stop(handle: *mut capture_handle_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 暂停抓包\n @param handle 抓包句柄\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_pause(handle: *mut capture_handle_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 恢复抓包\n @param handle 抓包句柄\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_resume(handle: *mut capture_handle_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 获取统计信息\n @param handle 抓包句柄\n @param stats 统计信息结构\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_get_stats(
        handle: *mut capture_handle_t,
        stats: *mut capture_stats_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 设置过滤器\n @param handle 抓包句柄\n @param filter BPF 过滤器\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_set_filter(
        handle: *mut capture_handle_t,
        filter: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 获取支持的设备列表\n @param devices 设备列表\n @param count 设备数量\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_get_devices(
        devices: *mut *mut capture_device_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 释放设备列表\n @param devices 设备列表\n @param count 设备数量"]
    pub fn capture_free_devices(devices: *mut capture_device_t, count: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " 清理抓包句柄\n @param handle 抓包句柄"]
    pub fn capture_cleanup(handle: *mut capture_handle_t);
}
